# CQRS-fastapi

./: .gitignore  Makefile  README.md  pyproject.toml
src/app/: app.py
src/app/core/: __init__.py  dependencies.py  exception.py  response.py
src/app/routers/: __init__.py
src/app/routers/user/: __init__.py  (+2 more)
src/domain/commands/: base.py  message.py  post.py  user.py
src/domain/descriptors/: __init__.py  base.py  message_text.py  text.py  title.py  username.py
src/domain/entities/: base.py  message.py  post.py  user.py
src/domain/events/: base.py  message.py  post.py  user.py
src/domain/exceptions/: base.py  descriptors.py
src/domain/queries/: base.py  message.py  post.py  user.py
src/infrastructure/: mediator.py
src/infrastructure/commands/: __init__.py  base.py  message.py  post.py  user.py
src/infrastructure/events/: base.py
src/infrastructure/exceptions/: base.py  command.py  mediator.py
src/infrastructure/queries/: __init__.py  base.py  message.py  post.py  user.py
src/infrastructure/repository/: __init__.py
src/infrastructure/setup/: __init__.py  container.py
tests/app/: test_user_router.py
tests/domain/commands/: test_message_commands.py  test_post_commands.py  test_user.py  test_user_commands.py
tests/domain/descriptors/: test_message.py  test_text.py  test_title.py  test_username.py
tests/domain/entities/: test_message_entity.py  test_post_entity.py  test_user_entity.py  user.py
tests/domain/events/: test_message_events.py  test_post_events.py  test_user_events.py
tests/infrastructure/: conftest.py  test_mediator.py
(+20 files in other folders)
